--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "php": "^8.2",
         "laravel/breeze": "^2.3",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "kyslik/column-sortable": "^7.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
