--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "kyslik/column-sortable": "^7.0",
         "laravel/breeze": "^2.3",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1"
     },
